# stoker

./: .gitignore  Makefile  NOTICE  README.md  SECURITY.md  alembic.ini  mkdocs.yml
docs/: PACKS.md  PHASE0-REVIEW.md  WORKER-CONTRACT.md  control-plane.md  harness.md  index.md
harness/: .env.example  README.md  (+6 more)
server/: CONTROL-PLANE.md  Dockerfile  __init__.py  app.py  auth.py  bundles.py  config.py  crypto.py  db.py  lifecycle.py  metrics_lifecycle.py  migrate.py  models.py  preview.py  pyproject.toml  requirements.txt  schemas.py  slice_format.py
server/drivers/: __init__.py  base.py  fake.py  k8s.py  swarm.py
server/engines/: __init__.py  apportion.py  ceilings.py  known.py
server/gitsync/: __init__.py  sync.py
server/migrations/: env.py
server/migrations/versions/: 0001_baseline.py  0002_bigint_counters_and_indexes.py
server/routes/: __init__.py  agent.py  api.py  auth.py  metrics.py  tokens.py
server/tests/: __init__.py  _gitrepo.py  _helpers.py  conftest.py  test_api_tokens.py  test_apportion.py  test_auth.py  test_backfill.py  test_boot_reconcile.py  test_bundles.py  test_crypto.py  test_e2e.py  test_gitsync.py  test_gitsync_security.py  test_heartbeat.py  test_lease_state.py  test_metric_packs.py  test_migrations.py  test_operator_api.py  test_preview.py  test_rawreplay.py  test_release_gate.py  test_review_fixes.py  test_review_hardening.py  test_smoke.py
server/tests/drivers/: __init__.py  test_conformance.py  test_k8s.py  test_swarm_url.py
worker/: Dockerfile  pyproject.toml  requirements.txt
worker/engines/eventgen/: ENGINE-NOTES.md  VENDOR.md
worker/engines/eventgen/splunk_eventgen/: __main__.py  eventgen_core.py
worker/engines/eventgen/splunk_eventgen/lib/: eventgenconfig.py  eventgensamples.py  eventgentimestamp.py  eventgentoken.py  generatorplugin.py  raterplugin.py
worker/engines/eventgen/splunk_eventgen/lib/plugins/generator/: jinja.py
worker/engines/eventgen/splunk_eventgen/lib/plugins/output/: stoker.py
worker/engines/metrics/stoker_metrics/: __init__.py  __main__.py  engine.py  patterns.py
worker/engines/rawreplay/stoker_rawreplay/: __init__.py  __main__.py  engine.py  timestamps.py
worker/stoker_agent/: __init__.py  __main__.py  agent.py  bundle.py  config.py  confrewrite.py  control.py  engine.py  hec_client.py  metrics.py  pacing.py  slice.py  sockserver.py
worker/tests/: conftest.py  hec_sink.py  test_agent_rawreplay.py  test_agent_standalone.py  test_config.py  test_confrewrite.py  test_control.py  test_engine.py  test_eventgen_vendor.py  test_hec_client.py  test_metrics_engine.py  test_metrics_patterns.py  test_pacing.py  test_rawreplay.py  test_slice.py  test_sockserver.py  test_stoker_output.py
(+157 files in other folders)
